--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 600px;
+  width: 900px;
   margin: auto;
 }
 
@@ -39,6 +39,7 @@ html {
 
 .result-strip-item {
   padding: 0 5px;
+  white-space: nowrap;
 }
 
 .origin-text {
@@ -47,4 +48,7 @@ html {
 
 .user-name {
   min-width: 170px;
+}
+.no-user-name {
+  background-color: red;
 }
